welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:14: error: value unary_! is not a member of Unit
while(!posFinale()){
      ^ColumnByColumn:15: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
		ecritMessage();
                ^